--- a/frontend/src/app/login/page.css
+++ b/frontend/src/app/login/page.css
@@ -16,7 +16,7 @@
     padding: 60px;
     display: flex;
     flex-direction: row;
-    box-shadow: 0 2px 18px 10px rgb(0, 0, 0, 0.5);
+    box-shadow: 0 2px 18px 10px rgba(0, 0, 0, 0.315);
 }
 
 .title {
