--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -87,6 +87,30 @@ h1 {
     background-color: #d1d1d1;
 }
 
+.book {
+    width: 50vw;
+    height: 250px;
+    box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.315);
+    padding: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+}
+
+.book:hover {
+    box-shadow: 0 2px 12px 10px rgba(0, 0, 0, 0.226);
+}
+
+.thumbimage {
+    width: 200px;
+    height: 200px;
+    margin-right: 20px;
+}
+
+.bookname {
+    margin-bottom: 20px;
+}
 
 
 @media screen and (max-width: 600px) {
