--- a/frontend/src/app/components/sidepanel/page.css
+++ b/frontend/src/app/components/sidepanel/page.css
@@ -41,3 +41,12 @@
 .logoutbtn {
     margin-top: auto;
 }
+
+
+@media screen and (max-width: 600px) {
+    .sidepanel-main {
+        visibility: hidden;
+        padding: 0;
+        width: 0;
+    }
+  }
