--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -61,6 +61,7 @@ h1 {
 }
 
 .popular-searches {
+    width: 100vw;
     display: flex;
     flex-direction: row;
     overflow: scroll;
@@ -89,7 +90,7 @@ h1 {
 
 .book {
     width: 50vw;
-    height: 250px;
+    height: fit-content;
     box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.315);
     padding: 20px;
     border-radius: 20px;
@@ -114,7 +115,18 @@ h1 {
 
 
 @media screen and (max-width: 600px) {
+    .main {
+        padding: 0;
+    }
+    .sidepanel {
+        width: 0;
+    }
     .input-search {
         min-width: 250px;
+    }
+    .book {
+        flex-direction: column;
+        width: calc(100vw - 40px);
+        align-items: center;
     }
   }
