--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -113,6 +113,34 @@ h1 {
     margin-bottom: 20px;
 }
 
+.bookprops {
+    display: grid;
+    flex-direction: column;
+    width: 100%;
+}
+
+.bookactionbuttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.actionbutton {
+    background-color: #87C4FC;
+    width: 120px;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    margin-top: 20px;
+    min-height: 40px;
+}
+.actionbutton:hover {
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.226);
+    background-color: #4ba4f8;
+}
+
 
 @media screen and (max-width: 600px) {
     .main {
@@ -128,5 +156,11 @@ h1 {
         flex-direction: column;
         width: calc(100vw - 40px);
         align-items: center;
+    }
+
+    .actionbutton {
+        width: auto;
+        padding-left: 25px;
+        padding-right: 25px;
     }
   }
