--- a/frontend/src/app/components/sidepanel/page.css
+++ b/frontend/src/app/components/sidepanel/page.css
@@ -1,6 +1,7 @@
 
 .sidepanel-main {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     background-color: #F4F4F4;
@@ -45,8 +46,25 @@
 
 @media screen and (max-width: 600px) {
     .sidepanel-main {
-        visibility: hidden;
+        /* visibility: hidden; */
         padding: 0;
-        width: 0;
+        /* width: 0; */
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
+        scale: 0.7;
+        border-radius: 50px;
+        height: 15vh;
+        padding: auto;
     }
+
+    .logoutbtn {
+        margin-top: 20px;
+    }
+
+    .icondiv {
+        margin-bottom: 10px;
+    }
+
+    
   }
