--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -145,6 +145,7 @@ h1 {
 @media screen and (max-width: 600px) {
     .main {
         padding: 0;
+        flex-direction: column;
     }
     .sidepanel {
         width: 0;
