--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -7,6 +7,8 @@
     color: black;
     padding-top: 20px;
     padding: 10px;
+    position: fixed;
+    overflow: auto;
 }
 
 .page {
@@ -14,7 +16,7 @@
 }
 
 .sidepanel {
-    max-width: 7vw;
+    max-width: 100vw;
 }
 h1 {
     
@@ -146,6 +148,7 @@ h1 {
     .main {
         padding: 0;
         flex-direction: column;
+        overflow-x: hidden;
     }
     .sidepanel {
         width: 0;
