--- a/frontend/src/app/components/sidepanel/page.css
+++ b/frontend/src/app/components/sidepanel/page.css
@@ -17,6 +17,11 @@
     
 }
 
+.avatar:hover {
+    background-color: #D3D3D3;
+    padding: 10px;
+}
+
 .icondiv {
     margin-top: 30px;
     display: flex;
