--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -11,6 +11,12 @@
     overflow: auto;
 }
 
+.main-extra {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+}
+
 .page {
     padding-left: 20px;
 }
