--- a/frontend/src/app/components/sidepanel/page.css
+++ b/frontend/src/app/components/sidepanel/page.css
@@ -29,6 +29,9 @@
     align-items: center;
     border-radius: 10px;
     padding: 10px;
+    text-align: center;
+    height: 90px;
+    width: 90px;
 }
 
 .iconbtn {
