feat : Integrated search with server

--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -149,6 +149,10 @@ h1 {
     background-color: #4ba4f8;
 }
 
+.resultnum {
+    margin-bottom: 20px;
+}
+
 
 @media screen and (max-width: 600px) {
     .main {
