--- a/frontend/src/app/profile/page.css
+++ b/frontend/src/app/profile/page.css
@@ -57,6 +57,10 @@
         flex-direction: column;
     }
 
+    .main-extra {
+        flex-direction: column;
+    }
+
     .profile-content {
         padding: 5px;
     }
