feat : Added pdf viewer

--- a/frontend/src/app/search/page.css
+++ b/frontend/src/app/search/page.css
@@ -15,10 +15,12 @@
     display: flex;
     flex-direction: row;
     background-color: white;
+    min-height: 100vh;
 }
 
 .page {
     padding-left: 20px;
+    margin-left: 7vw;
 }
 
 .sidepanel {
@@ -159,6 +161,10 @@ h1 {
         padding: 0;
         flex-direction: column;
         overflow-x: hidden;
+    }
+    .page {
+        padding-left: 0;
+        margin-left: 5px;
     }
     .main-extra {
         flex-direction: column;
