--- a/frontend/src/app/components/sidepanel/page.css
+++ b/frontend/src/app/components/sidepanel/page.css
@@ -1,13 +1,13 @@
 
 .sidepanel-main {
     display: flex;
-    position: relative;
     flex-direction: column;
     align-items: center;
     background-color: #F4F4F4;
     padding: 30px;
     width: 7vw;
-    height: 100vh;
+    height: 100vh;    
+    position: fixed;
 }
 
 .avatar {
