feat : Added Save Book Functionality

--- a/frontend/src/app/saved/page.css
+++ b/frontend/src/app/saved/page.css
@@ -1,7 +1,21 @@
+.main {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    color: black;
+    padding-top: 20px;
+    padding: 10px;
+    position: fixed;
+    overflow: auto;
+}
+
 .main-extra {
     display: flex;
     flex-direction: row;
     background-color: white;
+    min-height: 100vh;
 }
 
 .main-content {
@@ -19,6 +33,18 @@
     margin-top: 40px;
     margin-bottom: 40px;
     margin-right: 15px;
+}
+
+.page {
+    padding-top: 20px;
+    padding-left: 20px;
+    margin-left: 7vw;
+    width: 100%;
+}
+
+
+.sidepanel {
+    max-width: 100vw;
 }
 
 @media screen and (max-width: 600px){
